--- a/defaults.ini
+++ b/defaults.ini
@@ -13,21 +13,24 @@ max_objects   = 6
 min_life      = 6
 max_life      = 25
 
-
-step_max      = 0.0   # 0 = anchored stems, set >0 for tray/camera walk
-
+# 0 = anchored stems, set >0 for tray/camera walk
+step_max      = 0.0 
 ;constant velocity 
 bias_x        = 0.0
 bias_y        = 0.0
 
 ; "wind" makes 
-wind_sigma    = 0.02    # global sigma of 
-wind_max      = 0.08    #
-sway_sigma    = 0.01    # per object motion
+ # global sigma of 
+wind_sigma    = 0.02   
+wind_max      = 0.08
+# per object motion
 
+sway_sigma    = 0.01    
 
-rot-sigma    = 0.02     # rad ≈ 1.1°  (set 0.00 to disable)
-scale-sigma  = 0.02     # ±2 percent global zoom per frame
+# rad ≈ 1.1°  (set 0.00 to disable)
+rot-sigma    = 0.02
+# ±2 percent global zoom per frame
+scale-sigma  = 0.02     
 
 noise_pos     = 0.002
 noise_size    = 0.001
@@ -46,6 +49,9 @@ output   = tests/output.json
 vis-dir  = tests/vis
 
 # tracking hyper-parameters
-max-dist = 0.10      # gating radius  (≥ wind_max + 3*noise_pos)
-max-age  = 5         # frames to keep a lost track before deletion
-alpha    = 0.70      # IoU weight in the association cost
+# gating radius  (≥ wind_max + 3*noise_pos)
+max-dist = 0.10
+# frames to keep a lost track before deletion
+max-age  = 5         
+# IoU weight in the association cost
+alpha    = 0.70      
